Fixed an issue with detail page not showing properly on mobile screens

--- a/src/styles/Navbar.sass
+++ b/src/styles/Navbar.sass
@@ -8,7 +8,7 @@
   background: $nav-bg
 
   .container
-    width: 100%
+    width: 80%
     height: 100%
     display: flex
     flex-direction: row
