--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -34,6 +34,9 @@ body
 
 
   @media all and (max-width: 768px)
+    .nav
+      .container
+        width: 95%
     .content-wrapper
       width: 100%
       .searchbar
@@ -45,17 +48,27 @@ body
       .movie-list
         grid-template-columns: repeat(2, 1fr);
       .details
+        height: 100%
         padding: 0
       .details-wrapper
-        flex-wrap: wrap
-        // flex-direction: column
-        // align-items: center
+        height: 100%
+        flex-direction: column
+        align-items: center
       .poster
-        height: 70%
-      .context
         height: 50%
-        width: 100%
-        padding: 3rem 0
+        img
+          height: 50%
+          width: 20%
+          margin: 0
+      .context
+        padding: 1.5rem 0
+        height: 40%
+        width: 18rem
+        display: flex
+        flex-direction: column
+        align-items: center
         p
-          width: 5rem
-
+          width: 18rem
+      button
+        margin: 0
+        height: 10%
